--- a/3-volumes/public/styles.css
+++ b/3-volumes/public/styles.css
@@ -32,7 +32,7 @@ header a {
 
 section {
   margin: 2rem auto;
-  max-width: 30rem;
+  width: 100%;
   padding: 1rem;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
