--- a/5-containers/frontend/src/components/UI/ErrorAlert.css
+++ b/5-containers/frontend/src/components/UI/ErrorAlert.css
@@ -2,7 +2,7 @@
   margin: 2rem auto;
   max-width: 30rem;
   background-color: #ffd9d9;
-  color: #640000;
+  color: #a14a4a;
   padding: 1rem;
   text-align: center;
   border-radius: 12px;
