--- a/5-containers/frontend/src/components/goals/TodoItem.css
+++ b/5-containers/frontend/src/components/goals/TodoItem.css
@@ -1,12 +1,12 @@
 .goal-item {
   margin: 1rem 0;
   padding: 1rem;
-  border: 1px solid #570080;
+  border: 1px solid #a14a4a;
   color: white;
-  background-color: #570080;
+  background-color: #a14a4a;
   text-align: center;
   font-size: 1.5rem;
   font-weight: bold;
-  border-radius: 30px;
   cursor: pointer;
+  
 }
